--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules\\1"]
-	path = submodules\\1
+[submodule "submodules/1"]
+	path = submodules/1
 	url = https://github.com/vonglongtac/git_module_a.git
